--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -411,9 +411,6 @@ button {
   border: 0;
 }
 
-.FooterDefaultLayout .footer-hover:hover, .FooterSummaryLayout .footer-hover:hover{
-  background-color: var(--on-hover) !important;
-}
 
 .FooterTwoButtonLayout .FlexButton {
   display: flex;
@@ -1924,11 +1921,7 @@ $header-title-font-size: 20px;
   }
 }
 
-input[type="checkbox"]{
-  color: var(--primary);
-}
-
-.MuiButton-raisedSecondary.MuiButton-sizeLarge.MuiButton-fullWidth:hover, 
-.MuiButton-raisedSecondary.MuiButton-sizeLarge:hover{
-  background-color: var(--on-hover);
-}
+// .MuiButton-raisedSecondary.MuiButton-sizeLarge.MuiButton-fullWidth:hover, 
+// .MuiButton-raisedSecondary.MuiButton-sizeLarge:hover{
+//   background-color: var(--on-hover);
+// }
