--- a/react_webviews/src/tax_filing/mini-components/Carousal.scss
+++ b/react_webviews/src/tax_filing/mini-components/Carousal.scss
@@ -6,6 +6,10 @@
   color: var(--gunmetal);
 }
 
+.tax-filing-carousal-subtitle {
+  width: 200px;
+}
+
 .tax-filing-carousal .pass-through {
   margin: 0;
   color: var(--gunmetal);
