Added finity base config changes

--- a/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
+++ b/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
@@ -30,7 +30,7 @@
       line-height: 22px;
 
       .insta-redeem-know-more {
-        color: #35cb5d;
+        color: var(--secondary);
         font-size: 10px;
         font-weight: 600;
         cursor: pointer;
