--- a/react_webviews/src/dashboard/Notification/Notification.scss
+++ b/react_webviews/src/dashboard/Notification/Notification.scss
@@ -41,7 +41,7 @@
         h4 {
           margin: 0;
           font-size: 16px;
-          color: #4f2da7;
+          color: var(--primary);
           font-weight: 500;
           line-height: 1.1;
         }
