--- a/react_webviews/src/fund_details/components/Style.scss
+++ b/react_webviews/src/fund_details/components/Style.scss
@@ -1,5 +1,5 @@
 .fund-detail-cover-bg {
-  background-color: #4f2da7;
+  background-color: var(--primary);
   height: 5em;
   width: 100%;
   z-index: -1;
