--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -325,7 +325,7 @@
 
     .edit {
       font-size: 13px;
-      color: #35cb5d;
+      color: var(--secondary);
       font-weight: bold;
       cursor: pointer;
     }
