--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -112,7 +112,7 @@
             font-weight: bold;
             font-size: 11px;
             line-height: 13px;
-            color: #4f2da7;
+            color: var(--primary);
             cursor: pointer;
             padding: 10px 10px 10px 5px;
 
