--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1126,7 +1126,7 @@ body[data-device="mobile"] {
   }
   50%,
   100% {
-    background-color: #119A4B;
+    background-color: var(--onfocus-background);
     opacity: 0.7;
   }
 }
