--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1469,7 +1469,7 @@
   padding: 10px 0;
   width: 100%;
   margin-bottom: -5px;
-  background-color: #35CB5D;
+  background-color: var(--secondary);
   color: white;
   border: none;
   padding: 16px 0;
