email/mobile verification Login Update

--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -358,7 +358,7 @@
 
 
 @media only screen and (max-height: 900px) {
-  .declaration-container{
+  .whatsapp-consent{
     position: absolute;
     bottom: 80px;
   }
