--- a/react_webviews/src/dashboard/Invest/components/Explore/IframeView.scss
+++ b/react_webviews/src/dashboard/Invest/components/Explore/IframeView.scss
@@ -93,7 +93,7 @@
 
 .diy-kyc-status-card{
   padding: 20px;
-  background-color: #F0F7FF;
+  background-color: var(--highlight);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.0483186);
   border-radius: 4px;
   position: relative;
