--- a/react_webviews/src/login_and_registration/bottomsheet/Style.scss
+++ b/react_webviews/src/login_and_registration/bottomsheet/Style.scss
@@ -1,4 +1,4 @@
-////////////// Account already exists Dialog //////////////////
+// Account already exists Dialog
 .account-already-exists-container {
   .text {
     font-size: 13px;
@@ -13,9 +13,9 @@
     flex-basis: 40%;
   }
 }
-/////////////////End of Account already exists Dialog
+// End of Account already exists Dialog
 
-////////////////Verify Details Dialog //////////////////
+// Verify Details Dialog
 .verify-details-container {
   .details {
     display: flex;
@@ -32,4 +32,3 @@
   }
 }
 
-////////////////End of Verify Details Dialog ////////////
