--- a/react_webviews/src/login_and_registration/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/commonStyles.scss
@@ -1,82 +1,83 @@
-.otp {
-  .content {
-    height: 100%;
+.verify-otp-container {
+  min-height: 100%;
+  max-width: 614px;
+  background-color: white;
+  padding: 60px 20px 20px 20px;
+  .title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 0px;
   }
-
-  .otp-content {
+  .verify-otp-header {
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-
-    .logo {
-      padding-top: 20px;
-      text-align: center;
-
-      img {
-        width: 100px;
-      }
-
-      h5 {
-        margin-bottom: 0;
-        margin-top: 15px;
-        font-weight: 500;
-        line-height: 1.1;
-        font-size: 14px;
-      }
+    p {
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 21px;
+      letter-spacing: 0px;
+      color: var(--steelgrey);
+      margin: 0;
     }
-
-    .otp-model {
-      text-align: center;
-      width: 400px;
-      height: auto;
-      border-radius: 8px;
-      padding: 20px 0 60px 0;
-      box-shadow: -2px 2px 13px 0 rgba(209, 209, 209, 0.3);
-      border: 0.5px solid #f0f0f0;
-      font-size: 16px;
-
-      .otp-text {
-        padding-top: 60px;
-      }
-
-      .input {
-        margin: 10px 0 20px 0;
-        text-align: center;
-        width: 150px;
-      }
-
-      input {
-        text-align: center;
-      }
-
-      .resend-otp {
-        font-size: 14px;
-        cursor: pointer;
-        color: purple;
-        text-align: center;
-        margin-left: auto;
-        display: table;
-        margin-right: auto;
-        margin-bottom: 50px;
-      }
-
-      button {
-        .loader {
-          position: absolute;
-          div {
-            color: white;
-            vertical-align: middle;
-          }
-        }
-      }
+  }
+  .default-otp-input-container {
+    justify-content: start;
+    margin-top: 30px;
+    .default-otp-input {
+      background-color: rgba(238, 238, 238, 0.3);
+      font-size: 13px;
+      line-height: 21px;
+      padding: 4px;
     }
+  }
+  .login-otp-button {
+    margin: 20px auto;
+  }
+  .login-otp-button-web{
+    margin-top: 60px;
+    width: 100%;
+  }
+  .login-otp-button-mobile {
+    position: absolute;
+    bottom: 0;
+    width: calc(100% - 40px);
+  }
+  .go-back-to-login{
+     justify-content: center;
+     display: flex;
+     font-weight: 400;
+     margin-top: 40px;
+  }
+}
+.verify-otp-container-secondary{
+  padding: 0 !important
+}
 
-    .otp-model-mini {
-      width: 360px;
-      border: none;
-      box-shadow: none;
-      padding-top: 40px;
+.login-form-field{
+  display: flex;
+  .country-code{
+    min-width: 85px;
+    margin-right: 15px;
+    .react-select__single-value{
+      margin-top: -3px !important;
+      color: var(--steelgrey);
+    }
+    .react-select__input{
+      margin-top: 0px !important;
+    }
+  }
+  
+  .mobile-number-login{
+    height: 52px;
+    background: rgba(238, 238, 238, 0.3);
+    width: 100%;
+    .MuiInputLabel-formControl{
+      left: 10px;
+      top: 4px;
+    }
+    .MuiInput-input{
+      margin-left: 10px;
     }
   }
 }
