Added new component for Otp (WVOtp)

--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -41,6 +41,8 @@
 }
 
 .communication-details-otp-container {
+  margin-top: 15px;
+  
   .otp-error-style {
     border-bottom: 1px solid var(--red) !important;
   }
