added WVButton + removed console

--- a/react_webviews/src/login_and_registration/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/commonStyles.scss
@@ -2,7 +2,7 @@
   min-height: 100%;
   max-width: 614px;
   background-color: white;
-  padding: 60px 20px 20px 20px;
+  padding: 20px;
   .title {
     font-size: 20px;
     font-weight: 700;
