--- a/react_webviews/src/reports/components/Summary/commonStyles.scss
+++ b/react_webviews/src/reports/components/Summary/commonStyles.scss
@@ -160,10 +160,10 @@
 
             .dot {
               position: absolute;
-              top: 4px;
+              top: 3px;
+              bottom: 3px;
+              left: 3px;
               right: 3px;
-              width: 9px;
-              height: 9px;
               background-color: var(--primary);
               border-radius: 50%;
             }
