Fixed on hover css for dailog buttons

--- a/react_webviews/src/reports/components/mini-components/mini-components.scss
+++ b/react_webviews/src/reports/components/mini-components/mini-components.scss
@@ -25,6 +25,10 @@
       background-color: white;
       color: var(--primary);
     }
+
+    .bg-full:hover {
+      background-color: var(--on-hover-background);
+    }
   }
 }
 
