css fix for Country Code

--- a/react_webviews/src/login_and_registration/Login/loginStyle.scss
+++ b/react_webviews/src/login_and_registration/Login/loginStyle.scss
@@ -92,9 +92,14 @@
               width: fit-content;
               margin-bottom: -20px;
   
-              //temp fix for commit id build
-              .MuiSelect-root {
-                margin-bottom: 1px;
+              .dropdown-without-icon{
+                position: relative;
+                top: -7px;
+                left: 2px;
+
+                .MuiSelect-root {
+                  margin-bottom: 8px;
+                }
               }
             }
   
