--- a/react_webviews/src/login_and_registration/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/commonStyles.scss
@@ -41,6 +41,10 @@
   .login-otp-button-mobile {
     position: absolute;
     bottom: 0;
+    left:0;
+    right:0;
+    margin-left:auto;
+    margin-right:auto;
     width: calc(100% - 40px);
   }
   .go-back-to-login{
