--- a/react_webviews/src/login_and_registration/Login/loginStyle.scss
+++ b/react_webviews/src/login_and_registration/Login/loginStyle.scss
@@ -242,6 +242,7 @@
   
       .login-details {
         .login-form {
+          width: 100%;
           padding: 0 20px;
   
           .header-text {
