Added secondary green config and missing assets

--- a/react_webviews/src/dashboard/MyAccount/MyAccount.scss
+++ b/react_webviews/src/dashboard/MyAccount/MyAccount.scss
@@ -162,7 +162,7 @@
 
       .upload-action {
         font-size: 16px;
-        color: var(--secondary);
+        color: var(--secondary-green);
         margin-top: 4px;
       }
     }
