--- a/react_webviews/src/dashboard/Recommendation/RecommendationTopCard.scss
+++ b/react_webviews/src/dashboard/Recommendation/RecommendationTopCard.scss
@@ -93,7 +93,7 @@
     }
 
     .amount {
-      color: #7ED321;
+      color: var(--secondary-green);
       font-weight: bold;
       margin-left: auto;
     }
