--- a/react_webviews/src/kyc/Bank/BanksList.scss
+++ b/react_webviews/src/kyc/Bank/BanksList.scss
@@ -55,7 +55,7 @@
           line-height: 12px;
           text-align: center;
           letter-spacing: 1px;
-          color: #7ed321;
+          color: var(--secondary-green);
           vertical-align: middle;
           box-sizing: border-box;
           cursor: pointer;
