--- a/react_webviews/src/reports/commonStyles.scss
+++ b/react_webviews/src/reports/commonStyles.scss
@@ -16,7 +16,7 @@
         text-align: center;
         margin: 0;
         font-size: 16px;
-        font-weight: 700;
+        font-weight: 600;
         line-height: 1.1;
         padding: 15px 0;
       }
@@ -216,7 +216,7 @@
       .switch-step {
         color: #4a4a4a;
         font-size: 14px;
-        font-weight: 700;
+        font-weight: 600;
         display: flex;
         align-items: flex-start;
         column-gap: 10px;
@@ -283,7 +283,7 @@
     .redeemed-head {
       font-size: 14px;
       color: #4a4a4a;
-      font-weight: 700;
+      font-weight: 600;
     }
 
     .head-info {
@@ -313,7 +313,7 @@
 
         .redeemed-text {
           color: #4a4a4a;
-          font-weight: 700;
+          font-weight: 600;
 
           h4 {
             color: #4a4a4a;
@@ -363,7 +363,7 @@
         .text {
           padding: 0 10px;
           color: #4a4a4a;
-          font-weight: 700;
+          font-weight: 600;
           font-size: 10px;
           text-align: center;
 
@@ -410,7 +410,7 @@
         background-color: #ffffff;
         padding: 9px 50px;
         border-radius: 20px;
-        color: #b2b2b2;
+        color: #ADB1C3;
       }
     }
   }
@@ -711,7 +711,7 @@
         margin-bottom: 20px;
         color: #555;
         font-size: 18px;
-        font-weight: 700;
+        font-weight: 600;
         line-height: 1.1;
         text-align: center;
       }
