--- a/react_webviews/src/reports/components/Sip/commonStyles.scss
+++ b/react_webviews/src/reports/components/Sip/commonStyles.scss
@@ -14,7 +14,7 @@
       font-size: 10px;
       letter-spacing: 2px;
       margin-bottom: 5px;
-      font-weight: 700;
+      font-weight: 600;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-align: center;
@@ -92,7 +92,7 @@
     font-size: 10px;
     letter-spacing: 2px;
     margin-bottom: 5px;
-    font-weight: 700;
+    font-weight: 600;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-align: center;
@@ -154,7 +154,7 @@
 
     .title {
       font-size: 12px;
-      font-weight: 700;
+      font-weight: 600;
       color: #0a1d32;
     }
 
@@ -192,7 +192,7 @@
 
       .completed {
         .text {
-          border-color: var(--secondary);
+          border-color: var(--secondary-green);
         }
       }
 
@@ -242,10 +242,10 @@
     }
 
     .link {
-      color: #35cb5d;
+      color: var(--secondary);
       font-size: 14px;
       line-height: 20px;
-      font-weight: 700;
+      font-weight: 600;
     }
   }
 }
@@ -287,7 +287,7 @@
 
         .title {
           font-size: 12px;
-          font-weight: 700;
+          font-weight: 600;
           color: #0a1d32;
         }
       }
@@ -300,7 +300,7 @@
           text-align: center;
 
           b {
-            font-weight: 700;
+            font-weight: 600;
           }
         }
 
@@ -340,7 +340,7 @@
 
     .title {
       font-size: 12px;
-      font-weight: 700;
+      font-weight: 600;
       color: #0a1d32;
     }
   }
@@ -355,7 +355,7 @@
       display: flex;
       color: #d0021b;
       font-size: 12px;
-      font-weight: 700;
+      font-weight: 600;
       margin-bottom: 15px;
       align-items: center;
 
@@ -405,7 +405,7 @@
   .title {
     color: #0a1d32;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 600;
     margin-bottom: 20px;
     margin-top: 20px;
     text-align: center;
@@ -423,7 +423,7 @@
 
     b {
       color: #3f5469;
-      font-weight: 700;
+      font-weight: 600;
     }
   }
 }
