--- a/react_webviews/src/reports/components/mini-components/mini-components.scss
+++ b/react_webviews/src/reports/components/mini-components/mini-components.scss
@@ -84,7 +84,7 @@
         }
 
         .completed {
-          background-color: var(--secondary);
+          background-color: var(--secondary-green);
         }
 
         .text {
@@ -124,7 +124,7 @@
         }
 
         .selected {
-          border-color: var(--secondary);
+          border-color: var(--secondary-green);
         }
       }
 
