--- a/react_webviews/src/login_and_registration/components/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/components/commonStyles.scss
@@ -5,7 +5,7 @@
     font-weight: 400;
     line-height: 21px;
     letter-spacing: 0px;
-    color: #767e86;
+    color: var(--steelgrey);
   }
   .details {
     display: flex;
