--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -299,7 +299,7 @@
       .resend-otp {
         font-size: 14px;
         cursor: pointer;
-        color: purple;
+        color: var(--primary);
         text-align: center;
         margin-left: auto;
         display: table;
