--- a/react_webviews/src/login_and_registration/common/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/common/commonStyles.scss
@@ -1,7 +1,7 @@
 //----------------------------verify-otp-container--------------------------- //
 .verify-otp-container {
   min-height: 100%;
-  max-width: 614px;
+  // max-width: 614px;
   background-color: white;
 
   .verify-otp-header {
@@ -28,29 +28,31 @@
   }
   .login-button {
     margin: 20px auto;
-  }
-  .login-button-web{
     margin-top: 60px;
     width: 100%;
-  }
-  .login-button-mobile {
-    position: fixed;
-    z-index: 9999;
-    bottom: 0;
-    left:0;
-    right:0;
-    margin-left:auto;
-    margin-right:auto;
-    width: calc(100% - 40px);
   }
   .go-back-to-login{
      justify-content: center;
      display: flex;
-     margin-top: 40px;
      color: var(--secondary);
   }
 }
 .verify-otp-container-secondary{
   padding: 0 !important
+}
+
+@media only screen and (max-height: 1024px) {
+  .verify-otp-container{
+       .login-button{
+        position: fixed;
+        z-index: 9999;
+        bottom: 0;
+        left:0;
+        right:0;
+        margin-left:auto;
+        margin-right:auto;
+        width: calc(100% - 40px);
+       }
+  }
 }
 //----------------------------verify-otp-CSS-END--------------------------- //
