updated assets, and added partner(moneycontrol) logo support(web and sdk specific) for iframe, minor css fix as per new finity changes

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -658,6 +658,10 @@ body[data-device="mobile"] {
     text-align: left;
     background: white;
   }
+
+  .dropdown-in-modal-close{
+    cursor: pointer;
+  }
 }
 
 .plus-minus-input-label {
