--- a/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
@@ -71,7 +71,7 @@
     p {
       font-size: 14px;
       span {
-        color: var(--secondary);
+        color: var(--secondary-green);
       }
     }
     & > p {
