--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -92,7 +92,7 @@
   color: var(--steelgrey);
   .recommendations-disclaimer-tc {
     a {
-      color: #337ab7;
+      color: var(--primary);
       text-decoration: none;
     }
     
