--- a/react_webviews/src/withdraw/mini-components/mini-components.scss
+++ b/react_webviews/src/withdraw/mini-components/mini-components.scss
@@ -183,7 +183,7 @@
   }
 
   .cta-button:hover {
-    background-color: var(--secondary);
+    background-color: var(--on-hover-background);
   }
   
   .cta-button .cta-button-text {
