--- a/react_webviews/src/fund_details/components/Style.scss
+++ b/react_webviews/src/fund_details/components/Style.scss
@@ -426,7 +426,7 @@
         line-height: 19px;
         letter-spacing: 0px;
         text-align: left;
-        color: #7ED321;
+        color: var(--secondary-green);
       }
     }
   }
