Fixed finity assets and css

--- a/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
+++ b/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
@@ -104,7 +104,7 @@
           .highlight-return {
             margin-right: 5px;
             font-weight: 600;
-            color: #7ed321;
+            color: var(--secondary-green);
           }
         }
       }
