2fa functional change + cssFix

--- a/react_webviews/src/common/ui/Otp/WVOtp.scss
+++ b/react_webviews/src/common/ui/Otp/WVOtp.scss
@@ -51,3 +51,10 @@
   line-height: 18px;
   margin-top: 5px;
 }
+
+.wv-otp-text {
+  text-align: center;
+  color: var(--steelgrey);
+  font-size: 13px;
+  line-height: 22px;
+}
