--- a/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
+++ b/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
@@ -1,9 +1,10 @@
 .clickable-text-ele{
-  margin-top: 82px;
+  margin-top: 60px;
   font-weight: 700;
   font-size: 12px;
   line-height: 15px;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 .security-settings {
