--- a/react_webviews/src/login_and_registration/common/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/common/commonStyles.scss
@@ -7,7 +7,7 @@
   .verify-otp-header {
     display: flex;
     align-items: center;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     margin-top: -10px;
     p {
       font-size: 13px;
@@ -15,6 +15,9 @@
       color: var(--steelgrey);
       margin: 0;
     }
+  } 
+   .login-subtitle{
+    margin-top: -20px;
   }
   .default-otp-input-container {
     justify-content: start;
@@ -41,18 +44,18 @@
   padding: 0 !important
 }
 
-@media only screen and (max-height: 1024px) {
+@media only screen and (max-height: 900px) {
   .verify-otp-container{
-       .login-button{
-        position: fixed;
-        z-index: 9999;
-        bottom: 0;
-        left:0;
-        right:0;
-        margin-left:auto;
-        margin-right:auto;
-        width: calc(100% - 40px);
-       }
+    .login-button{
+      position: fixed;
+      z-index: 9999;
+      bottom: 0;
+      left:0;
+      right:0;
+      margin-left:auto;
+      margin-right:auto;
+      width: calc(100% - 40px);
+    }
   }
 }
 //----------------------------verify-otp-CSS-END--------------------------- //
