indentation Fix + cssFix

--- a/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
+++ b/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
@@ -1,10 +1,7 @@
 .clickable-text-ele{
   margin-top: 60px;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  letter-spacing: 1px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .security-settings {
