--- a/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
@@ -42,9 +42,11 @@
 }
 
 .go-back-to-login {
-  font-weight: 300;
-  text-transform: uppercase;
-  color: var(--secondary);
+  margin: 40px auto 0px !important;
+
+  .MuiButton-label {
+    font-weight: 400;
+  }
 }
 
 .login-verify-pin {
@@ -68,5 +70,24 @@
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
+  }
+}
+
+.login-button {
+  margin: 60px auto 20px !important;
+  width: 100% !important;
+}
+
+@media only screen and (max-width: 767px) {
+  .verify-otp-container{
+    .login-button{
+      position: fixed;
+      z-index: 9999;
+      bottom: 0;
+      left:0;
+      right:0;
+      margin: 0px auto 20px !important;
+      width: calc(100% - 40px) !important;
+    }
   }
 }
