--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1466,7 +1466,7 @@
 }
 
 .call-back-popup-button:hover{
-  background-color: var(--on-hover);
+  background-color: var(--on-hover-background);
 }
 
 .call-back-popup-button{
