--- a/react_webviews/src/isip/components/Style.css
+++ b/react_webviews/src/isip/components/Style.css
@@ -140,5 +140,5 @@
     border-bottom-right-radius: 4px;
 }
 .biller-netbnak-copy:hover{
-  background-color: var(--on-hover);
+  background-color: var(--on-hover-background);
 }
