--- a/react_webviews/src/payment/components/Style.scss
+++ b/react_webviews/src/payment/components/Style.scss
@@ -262,7 +262,7 @@
     }
 
     .add-button button:hover, .upi-button button.active:hover{
-      background-color: var(--on-hover);
+      background-color: var(--on-hover-background);
     }
     
     .add-button button.bfdl, .footer button.bfdl, .upi-button button.bfdl {
