--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -334,7 +334,7 @@ input.default-otp-input {
   margin: 80px 0 0 0;
 
   .left-arrow:hover, .right-arrow:hover{
-    background-color: var(--on-hover);
+    background-color: var(--on-hover-background);
   }
 
 }
