--- a/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
@@ -52,27 +52,25 @@
     position: absolute;
     bottom: 0; 
     min-height: 160px;
-    background-color: #F8F8F8;  //  [ DO CHANGE THIS TO VAR ? which color? ]
+    background-color: #F8F8F8;
     width: 100%;
+    padding: 30px 0px 28px 86px;
+
+    div:nth-of-type(2) {
+      margin-bottom: 5px;
+    }
+
+    .title-text {
+      font-size: 11px;
+      line-height: 18px;
+      color: var(--steelgrey);
+    }
   }
 
   .brand-logo {
     height: 22px;
     width: 64px;
     margin-bottom: 15px;
-  }
-
-  .login-footer-title {
-    padding: 30px 0px 28px 86px;
-    div:nth-of-type(2){
-      margin-bottom: 5px !important;
-    }
-
-     .title-text {
-       font-size: 11px;
-       line-height: 18px;
-       color: var(--steelgrey);
-     }
   }
 // ---------------------- login footer css end-----------------------//
 
