Styling fix for forgot PIN screen

--- a/react_webviews/src/2fa/components/commonStyles.scss
+++ b/react_webviews/src/2fa/components/commonStyles.scss
@@ -1,19 +1,20 @@
-.forgot-fisdom-pin{
-   .forgot-pin-subtitle{
+.forgot-fisdom-pin {
+   .forgot-pin-subtitle {
      font-size: 11px;
      line-height: 18px;
      color: var(--steelgrey);
      margin: 5px 0px 15px 5px;
    }
 
-  .login-form-field{
-     display: flex;
-     flex-direction: column;
-    .input-field{
+  .login-form-field {
+    display: flex;
+    flex-direction: column;
+
+    .input-field {
       height: 52px;
       background: rgba(238, 238, 238, 0.3);
       width: 100%;
-      margin-top: 40px;
+      
       .MuiInputLabel-formControl{
         left: 10px;
         top: 4px;
@@ -21,6 +22,10 @@
       .MuiInput-input{
         margin-left: 10px;
       }
+    }
+
+    .input-field + .input-field {
+      margin-top: 40px;
     }
   }
 }
