--- a/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
@@ -1,8 +1,10 @@
 .login {
   background-color: #ffffff;
-  height: 100%;
   color: #333333;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   .header {
     background-color: var(--primary);
@@ -25,13 +27,14 @@
   .login-details {
     display: -ms-flexbox;
     display: flex;
+    flex: 1;
     -ms-flex-pack: center;
     justify-content: center;
-    margin-top: 56px;
-    padding-top: 40px;
+    align-items: center;
+    padding-top: 56px;
 
     .ld-left {
-      margin-top: 150px;
+      // margin-top: 150px;
       margin-right: 220px;
       padding: 0 20px;
     }
@@ -49,8 +52,6 @@
 
 // ---------------------- login footer css start-----------------------//
   .login-footer {
-    position: absolute;
-    bottom: 0; 
     min-height: 160px;
     background-color: #F8F8F8;
     width: 100%;
