--- a/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
@@ -91,7 +91,7 @@
 @media only screen and (max-width: 960px) {
   .login {
     .login-details {
-      padding-top: 0;
+      // padding-top: 0;
       .ld-left {
         display: none;
       }
@@ -99,6 +99,7 @@
         width: 100%;
         padding-top: 40px;
         padding-bottom: 60px;
+        height: 100%;
       }
     }
     .login-footer {
