--- a/react_webviews/src/reports/components/Fundwise/commonStyles.scss
+++ b/react_webviews/src/reports/components/Fundwise/commonStyles.scss
@@ -113,7 +113,7 @@
         }
 
         .fundswise-green-text {
-          color: #71bf1c;
+          color: var(--secondary-green);
         }
 
         .fundswise-red-text {
@@ -162,7 +162,7 @@
       }
 
       .fundswise-green-text {
-        color: #71bf1c;
+        color: var(--secondary-green);
       }
 
       .fundswise-red-text {
