--- a/react_webviews/src/withdraw/components/Otp/OtpSwitch.scss
+++ b/react_webviews/src/withdraw/components/Otp/OtpSwitch.scss
@@ -31,7 +31,7 @@
   .resend-otp {
     font-size: 14px;
     cursor: pointer;
-    color: purple;
+    color: var(--primary);
     text-align: center;
     display: table;
     margin: 32px auto;
