static page update for 2fa-fisdom Pin Input screens

--- a/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
+++ b/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
@@ -30,3 +30,20 @@
     }
   }     
 }
+
+.security-pin-btn {
+ height: 50px !important;  // Important because was not able to override other css Fix Needed
+ width: 320px !important;
+ margin-top: 400px !important;
+}
+
+.verify-otp-pin-container {
+  margin-left: 70px;
+  margin-bottom: -8px; 
+}
+
+@media only screen and (max-height: 900px) {
+.verify-otp-pin-container{
+   margin: 0px 20px 0px 2px;
+ }
+}
