--- a/react_webviews/src/2fa/components/commonStyles.scss
+++ b/react_webviews/src/2fa/components/commonStyles.scss
@@ -29,20 +29,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
   .vm-title {
-    font-weight: 500;
-    font-size: 15px;
+    font-weight: 700;
+    font-size: 20px;
+    // font-weight: 500;
+    // font-size: 15px;
     line-height: 32px;
     color: var(--dark);
-    margin-bottom: 50px;
+    margin-bottom: 10px;
   }
 
   .vm-subtitle {
-    margin-top: 10px;
+    // margin-top: 10px;
     font-size: 13px;
     line-height: 22px;
     color: var(--steelgrey);
+    margin-bottom: 50px;
+    text-align: center;   // TO center Align the subtitle text in mobile view
+    width: 300px;
   }
 
   .vm-otp-container {
@@ -77,6 +81,13 @@
   }
 }
   
+@media only screen and (max-height: 900px) {
+  .verify-mpin {
+    .vm-subtitle{
+      width: 100%;
+    }
+  }
+}
 
 @media only screen and (max-height: 900px) {
   .twofa-mpin-change-success{
