Fixed styling issues for EnterMPin

--- a/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
@@ -64,6 +64,8 @@
     line-height: 32px;
     letter-spacing: 1px;
     color: var(--dark);
+    margin-top: 0;
+    margin-bottom: 20px;
   }
   
   .lvp-footer {
