Fixed image flicker in refer and instaredeem

--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -23,6 +23,11 @@
       }
     }
 
+    .insta-redeem-dialog-icon {
+      width: 100px !important;
+      min-height: 60px;
+    }
+
     .insta-redeem-head-bar {
       padding-top: 10px;
       margin-right: 0;
