--- a/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
+++ b/react_webviews/src/dashboard/Invest/components/InstaRedeem/InstaRedeem.scss
@@ -20,8 +20,10 @@
     padding-top: 15px;
     padding-bottom: 15px;
 
-    img {
-      margin-right: 15px;
+    .benefit-img {
+      margin-right: 15px !important;
+      width: 80px !important;
+      min-height: 60px;
     }
 
     .text {
