--- a/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/LoginContainer.scss
@@ -52,10 +52,17 @@
 
 // ---------------------- login footer css start-----------------------//
   .login-footer {
-    min-height: 160px;
+    min-height: 80px;
     background-color: #F8F8F8;
     width: 100%;
-    padding: 30px 0px 28px 86px;
+    padding: 20px 80px;
+
+    .lf-logos {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 5px;
+    }
 
     div:nth-of-type(2) {
       margin-bottom: 5px;
