using common header for iframe mobile view

--- a/react_webviews/src/dashboard/DIY/components/Search.scss
+++ b/react_webviews/src/dashboard/DIY/components/Search.scss
@@ -12,7 +12,7 @@
   height: calc(100vh - 120px);
 
   .search-content {
-    padding: 20px 0;
+    padding-bottom: 20px;
     .search-option {
       display: flex;
       align-items: center;
