--- a/react_webviews/src/wealth_report/mini-components/Style.scss
+++ b/react_webviews/src/wealth_report/mini-components/Style.scss
@@ -982,11 +982,11 @@ span.wr-small-col-title {
     }
 
     .wr-header-pan-select{
-      display: none; // TODO: remove this
+      display: none;
     }
 
     .wr-pan-content {
-      display: none; //Todo: remove this
+      display: none;
     }
 
     .wr-pan {
