--- a/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
+++ b/react_webviews/src/dashboard/MyAccount/2fa/commonStyles.scss
@@ -9,7 +9,7 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 50%;
+      min-height: 200px;
     }
     
   .bottom-space{
@@ -17,15 +17,15 @@
   }
   .account-options {
     border-bottom: none;
-    padding: 15px 15px 15px 20px;
+    padding: 15px 15px 15px 0px;
     font-size: 16px;
     cursor: pointer;
     display: flex;
     align-items: center;
     color: #333333;
-    img {
-      width: 25px;
-      margin-right: 15px;
+    .padlock-imgc {
+      width: 25px !important;
+      margin-right: 15px !important;
       margin-top: -3px;
     }
   }     
