--- a/react_webviews/src/dashboard/MyAccount/MyAccount.scss
+++ b/react_webviews/src/dashboard/MyAccount/MyAccount.scss
@@ -70,9 +70,14 @@
         display: flex;
         align-items: center;
         color: #333333;
-        img {
-          width: 25px;
-          margin-right: 15px;
+        .alert-icn {
+          width: 30px !important;
+          border: 1px solid red;
+        }
+        .my-imgc {
+          width: 25px !important;
+          min-height: 30px;
+          margin-right: 15px !important;
           margin-top: -3px;
         }
         .pending {
