Fixed terms color

--- a/react_webviews/src/reports/commonStyles.scss
+++ b/react_webviews/src/reports/commonStyles.scss
@@ -684,7 +684,7 @@
 
     .rim-terms-text {
       cursor: pointer;
-      color: #337ab7;
+      color: var(--primary);
       text-decoration: none;
     }
   }
