--- a/react_webviews/src/dashboard/Invest/components/Explore/IframeView.scss
+++ b/react_webviews/src/dashboard/Invest/components/Explore/IframeView.scss
@@ -47,7 +47,6 @@
     display: flex;
     justify-content: space-between;
     min-width: 130px;
-    margin-bottom: 35px;
     .diy-iframe-category{
       margin-right: 10px;
       flex: 1 1 100%;
@@ -92,6 +91,7 @@
 }
 
 .diy-kyc-status-card{
+  margin-top: 35px;
   padding: 20px;
   background-color: var(--highlight);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.0483186);
