--- a/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
+++ b/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
@@ -12,7 +12,7 @@
    .wvtext-block {
      width: 36px;
      height: 24px;
-     background-color: #F0F7FF;
+     background-color: #EFEEFB;
      color: var(--steelgrey);
      padding-top: 4px;
      border-radius: 4px;
