Updated nfo asset for marketing banner & fixed date

--- a/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
+++ b/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
@@ -15,12 +15,13 @@
       height: 100px;
       display: block;
       padding-bottom: 0px;
-      background: black;
+      cursor: pointer;
     }
 
     .single-marketing-banner {
       min-height: 120px;
       width: 100%;
+      cursor: pointer;
     }
   }
 
