--- a/react_webviews/src/login_and_registration/pages/SecondaryVerification/secondaryVerification.scss
+++ b/react_webviews/src/login_and_registration/pages/SecondaryVerification/secondaryVerification.scss
@@ -1,4 +1,12 @@
   
+  .form{
+    .input-subtitle{
+      margin-top: -10px;
+      line-height: 18px;
+      font-size: 11px;
+    }
+  }
+  
   .login-form-field{
     display: flex;
     .country-code{
