--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -6,25 +6,37 @@
   }
 
   .kyc {
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 270px;
+    display: flex;
+    justify-content: space-between;
+    height: 84px;
     margin: 20px 0 30px 0;
-    border-radius: 6px;
-    padding: 120px 0 0 20px;
+    border-radius: 4px;
+    padding-left: 20px;
     cursor: pointer;
+    background-color: var(--highlight) !important;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.0483186);
 
-    .title {
-      font-size: 20px;
-      color: white;
-      font-weight: 700;
-      margin: 10px 0 0 0;
+    .kyc-card-text {
+      .title {
+        font-size: 20px;
+        color: #160D2E;
+        font-weight: bold;
+        margin: 21px 0 5px 0;
+        font-weight: bold;
+        font-size: 13px;
+        line-height: 20px;
+      }
+  
+      .subtitle {
+        font-size: 13px;
+        color: #160D2E;
+        margin-bottom: 20px;
+        font-size: 13px;
+        line-height: 18px;
+      }
     }
+    .kyc-card-image {
 
-    .subtitle {
-      font-size: 14px;
-      color: white;
-      margin: 7px 0 7px 0;
     }
   }
 
