--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -13,13 +13,13 @@
     border-radius: 4px;
     padding-left: 20px;
     cursor: pointer;
-    background-color: var(--highlight) !important;
+    background-color: var(--highlight);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.0483186);
 
     .kyc-card-text {
       .title {
         font-size: 20px;
-        color: #160D2E;
+        color: var(--gunmetal);
         font-weight: bold;
         margin: 21px 0 5px 0;
         font-weight: bold;
@@ -29,14 +29,36 @@
   
       .subtitle {
         font-size: 13px;
-        color: #160D2E;
+        color: var(--gunmetal);
         margin-bottom: 20px;
         font-size: 13px;
         line-height: 18px;
-      }
-    }
-    .kyc-card-image {
+        display: flex;
+        align-items: center;
 
+        .point {
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
+          background-color: var(--gunmetal);
+          margin-right: 6px;
+        }
+      }
+
+      .kyc-submitted {
+        color: #B39712;
+        font-weight: 500;
+      }
+
+      .kyc-complete {
+        color: var(--secondary);
+        font-weight: 700;
+      }
+
+      .kyc-rejected {
+        color: var(--red);
+        font-weight: 500;
+      }
     }
   }
 
