--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -8,7 +8,7 @@
   .kyc {
     display: flex;
     justify-content: space-between;
-    height: 84px;
+    min-height: 84px;
     margin: 20px 0 30px 0;
     border-radius: 4px;
     padding-left: 20px;
