--- a/react_webviews/src/dashboard/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/mini-components/mini-components.scss
@@ -220,3 +220,55 @@
 }
 
 // Account merge confirm  back styling END -----
+
+.product-category-block {
+  padding: 16px 10px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  display: flex;
+  justify-content: flex-start;
+  cursor: pointer;
+  margin-left: -10px;
+
+  .image-wrapper {
+    margin-right: 16px;
+
+    .catergory-icon {
+      min-width: 54px;
+    }
+  }
+
+  .content-wrapper {
+    flex: 1;
+    .category-name {
+      font-size: 15px;
+      font-weight: 500;
+      line-height: 24px;
+      letter-spacing: 0px;
+      text-align: left;
+    }
+
+    .category-fullform {
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 21px;
+      letter-spacing: 0px;
+      text-align: left;
+      color: #767e86;
+    }
+    .category-divider {
+      height: 1px;
+      width: 100%;
+      background-color: #dfd8ef;
+      margin-top: 20px;
+    }
+  }
+}
+
+.product-category-block:last-child{
+  .content-wrapper {
+    .category-divider {
+      display: none;
+    }
+  }
+}
