Added account & brokerage charges

--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -126,6 +126,12 @@
       }
     }
 
+    .account-and-brokerage-charges {
+      border-top: 1px solid var(--linkwater);
+      padding: 15px 0;
+      cursor: pointer;
+    }
+
     .kaim-fees-info {
       display: flex;
       justify-content: space-between;
@@ -136,18 +142,17 @@
         font-size: 13px;
         line-height: 21px;
         color: var(--dark);
+      }
 
-        .kaim-fees-info-subtext {
-          font-size: 11px;
-          line-height: 18px;
-          color: var(--steelgrey);
-        }
+      .kaim-fees-info-subtext {
+        font-size: 11px;
+        line-height: 18px;
+        color: var(--steelgrey);
       }
 
       .kaim-no-fees-text1 {
         font-size: 13px;
         line-height: 21px;
-        text-decoration-line: line-through;
         color: var(--steelgrey);
       }
 
@@ -158,6 +163,12 @@
         color: var(--primary);
         text-align: right;
       }
+    }
+
+    .line-divider {
+      height: 1px;
+      width: 100%;
+      background: var(--linkwater);
     }
 
     .kaim-terms {
