changed to steelgrey

--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -29,7 +29,7 @@
   
       .subtitle {
         font-size: 13px;
-        color: var(--gunmetal);
+        color: var(--steelgrey);
         margin-bottom: 20px;
         font-size: 13px;
         line-height: 18px;
